<resources>
    <string name="app_name">ChatApp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="create_password">Create Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_up_with_phone">Sign up with phone</string>
    <string name="new_user">New user ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="default_web_client_id">638901298602-oriulkc895lrad39bpk9oq2b8o0gn9mc.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>