<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginHorizontal="7dp"
        android:layout_marginEnd="7dp"
        android:padding="3dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/icon_main"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed" />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="60dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="35dp"
        android:textColorHint="@color/black_opaque_40"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_app_icon"
        tools:ignore="VisualLintTextFieldSize" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:minHeight="35dp"
        android:textColorHint="@color/black_opaque_40"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        tools:ignore="VisualLintTextFieldSize" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/already_have_an_account"
        android:textAlignment="textEnd"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@drawable/btn_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_sign_in_google"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/google_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_sign_in_facebook"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/facebook_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/sign_up_with_phone"
        android:textStyle="bold"
        android:textColor="@color/primary"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>